--- a/ShopPakemon/appsettings.json
+++ b/ShopPakemon/appsettings.json
@@ -8,7 +8,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ShopPakemon;Trusted_Connection=True;MultipleActiveResultSets=true" //строка подключеня базы данных
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ShopPokemon;Trusted_Connection=True;MultipleActiveResultSets=true" //строка подключеня базы данных
   },
 
   "Facebook": {
